syntax = "proto3";

package balance;

option go_package = "github.com/specify-poker/balance/proto";

// BalanceService provides internal gRPC API for the poker service
service BalanceService {
  // Account operations
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  rpc EnsureAccount(EnsureAccountRequest) returns (EnsureAccountResponse);

  // Two-phase buy-in operations
  rpc ReserveForBuyIn(ReserveForBuyInRequest) returns (ReserveForBuyInResponse);
  rpc CommitReservation(CommitReservationRequest) returns (CommitReservationResponse);
  rpc ReleaseReservation(ReleaseReservationRequest) returns (ReleaseReservationResponse);

  // Cash-out operation
  rpc ProcessCashOut(ProcessCashOutRequest) returns (ProcessCashOutResponse);

  // Pot operations
  rpc RecordContribution(RecordContributionRequest) returns (RecordContributionResponse);
  rpc SettlePot(SettlePotRequest) returns (SettlePotResponse);
  rpc CancelPot(CancelPotRequest) returns (CancelPotResponse);
}

// Common types
message TransactionMetadata {
  optional string table_id = 1;
  optional string hand_id = 2;
  optional int32 seat_id = 3;
  optional string reservation_id = 4;
  optional string reason = 5;
}

// GetBalance
message GetBalanceRequest {
  string account_id = 1;
}

message GetBalanceResponse {
  string account_id = 1;
  int64 balance = 2;            // Total balance
  int64 available_balance = 3;  // Balance minus pending reservations
  string currency = 4;
  int64 version = 5;
}

// EnsureAccount - creates account if not exists
message EnsureAccountRequest {
  string account_id = 1;
  int64 initial_balance = 2;  // Optional initial balance (e.g., signup bonus)
}

message EnsureAccountResponse {
  string account_id = 1;
  int64 balance = 2;
  bool created = 3;           // True if account was newly created
}

// ReserveForBuyIn - Phase 1 of two-phase buy-in
message ReserveForBuyInRequest {
  string account_id = 1;
  string table_id = 2;
  int64 amount = 3;
  string idempotency_key = 4;
  int32 timeout_seconds = 5;  // Optional, defaults to 30
}

message ReserveForBuyInResponse {
  bool ok = 1;
  string reservation_id = 2;
  string error = 3;           // Set if ok=false: INSUFFICIENT_BALANCE, ACCOUNT_NOT_FOUND
  int64 available_balance = 4;
}

// CommitReservation - Phase 2a of two-phase buy-in (success)
message CommitReservationRequest {
  string reservation_id = 1;
}

message CommitReservationResponse {
  bool ok = 1;
  string transaction_id = 2;
  string error = 3;           // Set if ok=false: RESERVATION_NOT_FOUND, ALREADY_COMMITTED, EXPIRED
  int64 new_balance = 4;
}

// ReleaseReservation - Phase 2b of two-phase buy-in (failure/cancel)
message ReleaseReservationRequest {
  string reservation_id = 1;
  string reason = 2;          // Optional reason for release
}

message ReleaseReservationResponse {
  bool ok = 1;
  string error = 2;           // Set if ok=false: RESERVATION_NOT_FOUND, ALREADY_RELEASED
  int64 available_balance = 3;
}

// ProcessCashOut - Credits winnings/remaining stack to account
message ProcessCashOutRequest {
  string account_id = 1;
  string table_id = 2;
  int32 seat_id = 3;
  int64 amount = 4;
  string idempotency_key = 5;
  string hand_id = 6;         // Optional, for pot winnings
}

message ProcessCashOutResponse {
  bool ok = 1;
  string transaction_id = 2;
  string error = 3;
  int64 new_balance = 4;
}

// RecordContribution - Records a bet/blind contribution to pot
message RecordContributionRequest {
  string table_id = 1;
  string hand_id = 2;
  int32 seat_id = 3;
  string account_id = 4;
  int64 amount = 5;
  string contribution_type = 6; // BLIND, BET, CALL, RAISE
  string idempotency_key = 7;
}

message RecordContributionResponse {
  bool ok = 1;
  string error = 2;
  int64 total_pot = 3;
  int64 seat_contribution = 4;
}

// SettlePot - Distributes pot to winners
message SettlePotRequest {
  string table_id = 1;
  string hand_id = 2;
  repeated PotWinner winners = 3;
  string idempotency_key = 4;
}

message PotWinner {
  int32 seat_id = 1;
  string account_id = 2;
  int64 amount = 3;
}

message SettlePotResponse {
  bool ok = 1;
  string error = 2;
  repeated SettlementResult results = 3;
}

message SettlementResult {
  string account_id = 1;
  string transaction_id = 2;
  int64 amount = 3;
  int64 new_balance = 4;
}

// CancelPot - Cancels an active pot (e.g., table disbanded)
message CancelPotRequest {
  string table_id = 1;
  string hand_id = 2;
  string reason = 3;
}

message CancelPotResponse {
  bool ok = 1;
  string error = 2;
}
